// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CarouselMessage allows style overrides 1`] = `
<MessageWrapper
  disableSafeAreaView={true}
>
  <Carousel
    data={Array []}
    indicatorActiveStyle={
      Array [
        Object {
          "backgroundColor": "#a1a1a1",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        Object {
          "backgroundColor": "red",
        },
      ]
    }
    indicatorInactiveStyle={
      Array [
        Object {
          "backgroundColor": "#d8d8d8",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        Object {
          "backgroundColor": "blue",
        },
      ]
    }
    renderItem={[Function]}
  />
</MessageWrapper>
`;

exports[`CarouselMessage renders as expected 1`] = `
<MessageWrapper
  disableSafeAreaView={true}
>
  <Carousel
    data={Array []}
    indicatorActiveStyle={
      Array [
        Object {
          "backgroundColor": "#a1a1a1",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    indicatorInactiveStyle={
      Array [
        Object {
          "backgroundColor": "#d8d8d8",
          "borderRadius": 6,
          "height": 12,
          "margin": 4,
          "width": 12,
        },
        undefined,
      ]
    }
    renderItem={[Function]}
  />
</MessageWrapper>
`;

exports[`CarouselMessage renders items 1`] = `
<CarouselMessageItem
  image={
    Object {
      "src": "image-src",
    }
  }
  layout="CAROUSEL"
/>
`;
